[package]
name = "rusted_feelings"
version = "0.1.0"
edition = "2021"
author = "foom"
description = "Keeping a mood journal may be interesting for some and necessary for others."

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.39"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
log = "0.4.22"
log4rs = "1.3.0"
rusqlite = {version = "0.32.1", features=["chrono"]}
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[[bin]]
name = "rf"
path = "src/main.rs"
